# eg-templates

./: .gitignore  Dockerfile  Dockerfile.pytorch-kernel  Dockerfile.singleuser  Dockerfile.singleuser-remote-dev  Dockerfile.tf-kernel  README.md  eg-values.yaml  gpu-dedicated-pod-template.yaml.j2  gpu-shared-pod-template.yaml.j2  kernel.json  launch_kubernetes.py  package-lock.json  start-jhub.sh
cpu-large/: kernel-pod.yaml.j2  kernel.json
cpu-small/: kernel-pod.yaml.j2  kernel.json
kernel-images/pytorch-gpu-vscode/: Dockerfile  start-with-vscode.sh
kernel-images/tf-gpu-vscode/: Dockerfile  start-with-vscode.sh
missed-output/: .copier-answers.yml  Dockerfile  LICENSE  install.json  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsconfig.tsbuildinfo
missed-output/jupyterlab_missed_output_replay/: __init__.py  _version.py
missed-output/jupyterlab_missed_output_replay/labextension/: package.json
missed-output/jupyterlab_missed_output_replay/labextension/static/: 232.6a964b186ead2737.js  382.abc0474fc7d378a8.js  418.1d2c414cd093feb2.js  remoteEntry.a595e81acc233695.js  style.js  third-party-licenses.json
missed-output/lib/: index.js
missed-output/src/: index.ts
pytorch-gpu-dedicated/: kernel.json
pytorch-gpu-half/: kernel.json
pytorch-gpu-quarter/: kernel.json
pytorch-gpu-quarter-vscode/: kernel.json
shell-yaml-configs/: config.yaml  eg-values.yaml  install-enterprise-gateway.sh  install-jupyterhub.sh
shell-yaml-configs/keycloak/: configure-keycloak.sh  deploy.sh  install-keycloak.sh  keycloak.yaml
tf-gpu-dedicated/: kernel.json
tf-gpu-half/: kernel.json
tf-gpu-quarter/: kernel.json
tf-gpu-quarter-vscode/: kernel.json
